update profile and dashboard

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
+GOOGLE_ID=<Google_Client_ID>
+GOOGLE_SECRET=<Google_Client_Secret>
+
+NEXTAUTH_SECRET=<Nextauth_Secret>
+NEXTAUTH_URL=<Nextauth_URL>
