--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.12",
     "@prisma/client": "^5.7.1",
+    "gsap": "^3.12.5",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
